# apps/springtaled/src/api/openapi.rs
@@ -165,6 +165,10 @@ use super::*;
         config_api::ConfigureAiBody,
         data::PurgeBody,
         executions::VacuumResponse,
+        formations::CastVoteBody,
+        formations::IntentBody,
+        formations::MemberBody,
+        formations::RunCommandBody,
         lock::UnlockRequest,
         login::CreateTokenRequest,
         login::LoginRequest,
